--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 
     <h3>Leave a comment</h3>
 
+    <div id = "comments">
+
+    </div>
     <form id="comment-form" action="">
-      <input type='text' name="comment" id="comment-input" cols="30" rows="10">
+      <input type='text' name="comment" id="comment_input" cols="30" rows="10">
       </br>
       <button id='submit'>submit</button>
     </form>
